# sync-engine

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: testing.md
docs/adr/: ADR-001-hybrid-rest-webhook.md  ADR-002-pluggable-store-interface.md  ADR-003-webhook-hmac-sha256-signature-verification.md
src/sync_engine/: exceptions.py
src/sync_engine/store/: base.py  memory.py
src/sync_engine/webhook/: handler.py  verifier.py
tests/: test_exceptions.py
tests/store/: test_memory_store.py
tests/webhook/: test_handler.py  test_verifier.py
