[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sync-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sync_engine"]
